# otus-cpp-developer

./: README.md
04_functions/: CMakeLists.txt  fib.cpp  fib.h  fib_funct.cpp
homework1/: CMakeLists.txt  example.cpp  hello_world.cpp  move_me_out.cpp
homework3/: CMakeLists.txt  check_value.cpp  functions.cpp  gess_number.h
homework4/include/: add.hpp  div.hpp  mul.hpp  number.hpp  parser.hpp  sub.hpp  variable.hpp
homework4/src/: main.cpp  parser.cpp
homework5/: CMakeLists.txt  statistics.cpp
homework6/: CMakeLists.txt  list_container.cpp  list_container_one_root.cpp  successive_container.cpp
homework6/list_container/: list_container.hpp  main_list.cpp
homework6/list_container_one_root/: list_container_one_root.hpp  main_list_one_root.cpp
homework6/successive_container/: main_successive.cpp  successive_container.hpp
homework7/: CMakeLists.txt
homework7/list_container/: list_container.hpp
homework7/list_container_one_root/: list_container_one_root.hpp
homework7/successive_container/: successive_container.hpp
homework7/test/: successive_tests.cpp
homework8/: CMakeLists.txt  topk_words.cpp
project1/: CMakeLists.txt  RentCarDB.db  chat_bot.cpp  chat_bot.h  db.cpp  db.h  headers.h  main.cpp  rent_car.cpp  test.cpp
smart_ptr/: CMakeLists.txt
smart_ptr/list_container_one_root/: list_container_one_root.hpp
smart_ptr/successive_container/: successive_container.hpp
smart_ptr/test/: listOR_tests.cpp  list_tests.cpp
